Storage Utility to store data on file and access in TorPlugin

--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -10,6 +10,7 @@ apply from: '../dagger.gradle'
 
 dependencies {
 	api project(':briar-api')
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 	implementation project(':bramble-core')
 
