--- a/bramble-core/build.gradle
+++ b/bramble-core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -10,6 +11,8 @@ apply from: '../dagger.gradle'
 
 dependencies {
 	api project(':bramble-api')
+//	implementation project(':bramble-android')
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 	api "org.briarproject:onionwrapper-core:$onionwrapper_version"
 
